# Rust-REST-API

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  test.http
src/: main.rs
src/adapter/: auth.rs
src/config/: mod.rs
src/controller/: mod.rs  others.rs  post.rs  user.rs
src/controller/actix/: mod.rs  others.rs  post.rs  user.rs
src/controller/axum/: mod.rs  others.rs  post.rs  user.rs
src/entity/: error.rs  post.rs  user.rs
src/repository/: mod.rs
src/repository/mongo/: mod.rs
src/repository/postgres/: mod.rs
src/tests/: actix.rs  axum.rs  mod.rs
