[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
mongodb = "3.2.5"
rand = "0.9.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
