[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
bson = {version = "2.15.0", features = ["chrono-0_4", "uuid-1"]}
chrono = { version = "0.4.41", features = ["clock", "serde"] }
cookie = "0.18.1"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.28"
mongodb = "3.3.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_with = "3.14.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.18.0", features = ["serde", "v4", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }
